# LLM-ComputeOps-Eval-Hub

./: .env.example  .gitignore  QUICKSTART.md  README.md  project_status.md  pyproject.toml
backend/app/: auth.py  config.py  db.py  main.py  schemas.py
backend/app/eval_runner/: __init__.py  case_loader.py  runner.py  summary.py
backend/app/evaluators/: __init__.py  answer_eval.py  base.py  format_eval.py  keyword_eval.py  router.py  safety_eval.py  tool_call_eval.py
backend/app/providers/: base.py  ollama.py
backend/app/services/: request_logger.py
backend/app/static/: index.html
deployment/: index.html  setup-macos.html  setup-windows.html
docs/: README.md  api.md  day1.md  index.html
docs/versions/: 0.1.0.md
eval_cases/: smoke_cases.jsonl
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  api.test.ts  api.ts  styles.css
scripts/: init_db.py  run_eval.py
tests/: test_day1_api.py  test_day2_eval_runner.py
