[project]
name = "llm-computeops-eval-hub"
version = "0.1.0"
description = "Day 1 local LLM inference gateway with auth, API keys, Ollama proxy, and request logs."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
